# ACL2024-SymmetricAttentionBert

./: .gitignore  LICENSE  README.md
data/: README.md  oscar_filter.py  oscar_filter.sh  oscar_split.py  oscar_split.sh
enroot/: build.sh  install.sh
experiments/acl2024/: README.md  bert_base.sh  bert_base_batch.sbatch  bert_small.sh  bert_small_batch.sbatch  preprocess.sh  run_glue.sh  run_glue_batch.sh  run_glue_checkpoint.sh  run_glue_checkpoint_batch.sh
notebooks/Modeling/: model_sizes.ipynb  model_sizes_llama2.ipynb
notebooks/paper/: exp2_glue_scores.arrow  exp2_harvest_data.ipynb  exp2_tables.ipynb  exp3_figures.ipynb  exp3_glue_scores.arrow  exp3_harvest_data.ipynb  plots.ipynb  requirements.txt  validation_loss_bert_base.csv  validation_loss_bert_small.csv
notebooks/paper/Exp2_results/bert_base_pairwise_20240204-093411-seed1_cola_20240207-232143/: eval_results.json
notebooks/paper/Exp2_results/bert_base_pairwise_20240204-093411-seed1_mnli_20240207-232501/: eval_results.json
notebooks/paper/Exp2_results/bert_base_pairwise_20240204-093411-seed1_mrpc_20240207-232502/: eval_results.json
notebooks/paper/Exp2_results/bert_base_pairwise_20240204-093411-seed1_qnli_20240207-232934/: eval_results.json
plpi/: pyproject.toml
plpi/src/plpi/models/: __init__.py
plpi/src/plpi/models/bert/: configuration_bert.py  modeling_bert.py
plpi/src/plpi/models/roberta/: configuration_roberta.py  modeling_roberta.py
scripts/: example.sh  run_glue.py  train_mlm.py
slurm/: interactive_bash.sh  prolog.sh
(+752 files in other folders)
