[tool.poetry]
name = "plpi"
version = "1.0.1"
description = ""
authors = ["Martin Courtois <martin.courtois@protonmail.com>"]
readme = "README.md"
packages = [
    {include = "plpi", from = "src"},
]

[tool.poetry.dependencies]
python = ">=3.10.6,<3.13"
torch = ">=2.0.0, !=2.0.1"
transformers = {extras = ["torch"], version = "4.37.2"}
accelerate = "0.23.0"
datasets = "2.14.4"
tokenizers = ">=0.14,<0.19"
fire = "^0.5.0"
evaluate = "^0.4.1"
scipy = "^1.11.3"
scikit-learn = "^1.3.2"
wandb = "^0.16.0"
zstandard = "^0.22.0"
fsspec = "2023.9.2"
matplotlib = "^3.8.2"

[tool.poetry.group.notebook]
optional = true

[tool.poetry.group.notebook.dependencies]
jupyterlab = "^4.0.6"
ipywidgets = "^8.1.1"
matplotlib = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"